Added support for Java 11 and primitive collections to avoid (un)boxing.